@@ -1,5 +1,11 @@
 Changes with Apache 2.0.32-dev
 
+  *) The Location: response header field, used for external
+     redirect, *must* be an absoluteURI.  The Redirect directive
+     tested for that, but RedirectMatch didn't -- it would allow
+     almost anything through.  Now it, too, will correctly varf
+     if the redirection target isn't an absoluteURI.  [Ken Coar]
+
 Changes with Apache 2.0.31
 
   *) Add a timeout option to the proxy code 'ProxyTimeout' 
